Fix Java 8 API usage (post-merge)